--- a/george.html
+++ b/george.html
@@ -19,6 +19,6 @@
 <li>Ojara Oyo</li>
 <li>Jacob Nimrich</li>
 </ul>
-<a href="omala.html">click back</a>
+<a href="index.html">click back</a>
  </body>
 </html>
