--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body bgcolor="green">
 <h2 align="right"><a href="george.html">list of ICT studends</a></h2>
-<h2 align="right"><a href="file:///C:/Users/MUMMY%20FRANK/Desktop/my%20web.htm">my web new web</a></h2>
+<h2 align="right"><a href="my web.htm">my web web</a></h2>
 <h1>List of my friends and email adresses</h1>
 <table border color="red">
 <tr><td>Name</td><td>Email address</td></tr>
