--- a/my web.htm
+++ b/my web.htm
@@ -34,6 +34,7 @@ ZION CONSULTANTS LMITED</U>
 </li>
 <li>
 <h3><a href="title.html">LAND TITLES</a></h3></li>
+	<h3 align="right"><a href="omalageorge.com">woocommerce</a>
 <h2><li><a href="computer.html">COMPUTER SERVICES</a></li></h2>
 <h2><li><a href="contact us.html">CONTACT US</a></li></h2>
 <h2><li><a href="about us.html">ABOUT US</a></li></h2>
