--- a/ingridients website.html
+++ b/ingridients website.html
@@ -12,7 +12,7 @@
             <font size="24" color="green"> <ol><center><li>Onions</li></center> <center><li>Cooking oil</li></center><center> <li>Water</li></center><center> <li>Curry powder</li></center>
                <center> <li>Salt      .</li></center><center><li>pilao masala.</li></center>
             </ol> </font>
-            <a herf="george.html">MOREEEE..</a>
+            <a href="george.html">MOREEEE..</a>
              
 
         </body>
