--- a/ingridients website.html
+++ b/ingridients website.html
@@ -13,6 +13,7 @@
                <center> <li>Salt      .</li></center><center><li>pilao masala.</li></center>
             </ol> </font>
             <center><a href="index.html">CLICK BACK</a></center>
+            <img src="new2/baby.jpg" height="500px" width="500px">
              
 
         </body>
